@@ -4,6 +4,8 @@ Revision history for PDL-DSP-Windows
 
 Fixes:
   * Fixed a check that would sometimes fail in Windows machines
+  * Fixed a long-standing issue with calculation of a window's
+    scalloping loss.
 
 0.008003  2021-10-27 17:52:36 BST (TRIAL RELEASE)
 
